--- a/Front/src/assets/css/sb-admin-2.css
+++ b/Front/src/assets/css/sb-admin-2.css
@@ -233,7 +233,15 @@ label {
 }
 
 button {
+  font-weight: bold;
   border-radius: 0;
+}
+
+.btnsearch {
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #b70496;
+    border-color: #b70496;
 }
 
 button:focus {
@@ -9667,8 +9675,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-color: #b70496;
+  background-image: linear-gradient(180deg, #b70496 10%, #ffffff 100%);
   background-size: cover;
 }
 
